--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="buttons.css" />
     </head>
     <body onload="loadWords()">
         <!--[if lt IE 7]>
@@ -28,6 +29,7 @@
         <script src="words.js" async defer></script>
         <script src="main.js" async defer></script>
 
+        <!---------------------- The Main Menu ---------------------->
         <span id="mainMenu">
             <div id="logo">Speak Good</div>
             <button id="startGameButton" onclick="startGame()">
@@ -35,6 +37,7 @@
             </button>
         </span>
 
+        <!---------------------- The Game Manu ---------------------->
         <span id="gameMenu" style="display: none">
             <div id="roundScoreboard" class="scoreboard"></div>
             <button onclick="startTurn()" class="centeredButton">
@@ -45,25 +48,23 @@
             </button>
         </span>
 
+        <!--------------------- The Game Screen --------------------->
         <span id="gameScreen" style="display: none">
-            <div id="timerContainer">
-                <span id="timer"></span>
-                seconds left
-            </div>
+            <div id="timerContainer"></div>
 
             <div id="word"></div>
             <div id="controlPanel">
-                <span id="skipContainer">
-                    <button onclick="skipWord()" id="skipButton">
-                        Skip Word
-                    </button>
+                <button onclick="gotWord()" class="gameButton" id="gotItButton">
+                    Got it
+                </button>
+                <button onclick="skipWord()" class="gameButton" id="skipButton">
+                    Skip Word
                     <div id="skipsLeft"></div>
-                </span>
-
-                <button onclick="gotWord()">Got it</button>
+                </button>
             </div>
         </span>
 
+        <!------------------- The End game screen ------------------->
         <span id="endScreen" style="display: none">
             <div class="centeredHeader">You Won!</div>
             <div id="gameScoreboard" class="scoreboard"></div>
