fixes next button text

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
         <!---------------------- The Game Manu ---------------------->
         <span id="gameMenu" style="display: none">
             <div id="roundScoreboard" class="scoreboard"></div>
-            <button onclick="startTurn()" class="centeredButton">
+            <button
+                onclick="startTurn()"
+                class="centeredButton"
+                id="startTurnButton"
+            >
                 Start Turn
             </button>
             <button onclick="openMainMenu()" class="centeredButton">
