--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Speak Good</title>
+        <title>Incoherant</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
@@ -35,7 +35,7 @@
 
         <!---------------------- The Main Menu ---------------------->
         <span id="mainMenu">
-            <div id="logo">Speak Good</div>
+            <img id="logo" src="logo.svg"></img>
             <div class="roundTimerInput">
                 <label for="roundTime">Round Length (seconds)</label>
                 <div class="sliderControlContainer">
