--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
             <div class="roundTimerInput">
                 <label for="roundTime">Round Length (seconds)</label>
                 <div class="inputControlPanel">
-                    <span class="downButton" onclick="changeRoundLength(-5)">-5</span>
+                    <span class="downButton redButton" onclick="changeRoundLength(-5)">-5</span>
                     <span id="roundInputPreview">15</span>
-                    <span class="upButton" onclick="changeRoundLength(5)">+5</span>
+                    <span class="upButton blueButton" onclick="changeRoundLength(5)">+5</span>
                 </div>
             </div>
 
             <div class="gameLengthInput">
                 <label for="gameLength">Winning Point Number</label>
                 <div class="inputControlPanel">
-                    <span class="downButton" onclick="changeWinPoint(-5)">-5</span>
+                    <span class="downButton redButton" onclick="changeWinPoint(-5)">-5</span>
                     <span id="gameInputPreview">30</span>
-                    <span class="upButton" onclick="changeWinPoint(5)">+5</span>
+                    <span class="upButton blueButton" onclick="changeWinPoint(5)">+5</span>
                 </div>
             </div>
 
