--- a/index.html
+++ b/index.html
@@ -8,37 +8,39 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Incoherant</title>
+        <title>Incoherent</title>
         <meta name="description" content="" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-        />
+        <!-- Favicon and Meta info -->
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="meta/apple-touch-icon.png"
+            href="/Incoherent/meta/apple-touch-icon.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="meta/favicon-32x32.png"
+            href="/Incoherent/meta/favicon-32x32.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="16x16"
-            href="meta/favicon-16x16.png"
+            href="/Incoherent/meta/favicon-16x16.png"
         />
-        <link rel="manifest" href="meta/site.webmanifest" />
+        <link rel="manifest" href="/Incoherent/meta/site.webmanifest" />
         <link
             rel="mask-icon"
-            href="meta/safari-pinned-tab.svg"
+            href="/Incoherent/meta/safari-pinned-tab.svg"
             color="#f26b5a"
         />
+        <link rel="shortcut icon" href="/Incoherent/meta/favicon.ico" />
         <meta name="msapplication-TileColor" content="#222222" />
-        <meta name="theme-color" content="#ffffff" />
+        <meta
+            name="msapplication-config"
+            content="/Incoherent/meta/browserconfig.xml"
+        />
+        <meta name="theme-color" content="#222222" />
 
         <!-- Styles -->
         <link rel="stylesheet" href="style/style.css" />
@@ -51,6 +53,12 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
             rel="stylesheet"
+        />
+
+        <!-- Other meta info -->
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
         />
     </head>
     <body onload="loadWords()">
